@@ -80,6 +80,14 @@ acceptance_tests(
         test_description => 'an invalid IRI based on IPv6' },
       { file => 'idn-hostname.json',
         group_description => 'validation of internationalized host names' }, # IDN decoder, Data::Validate::Domain both have issues
+      { file => 'idn-hostname.json',
+        group_description => 'validation of separators in internationalized host names',
+        test_description => [
+          'dot as label separator',
+          'ideographic full stop as label separator',
+          'fullwidth full stop as label separator',
+          'halfwidth ideographic full stop as label separator',
+        ] },
       { file => 'uri.json',
         test_description => 'validation of URIs',
         test_description => 'an invalid URI with comma in scheme' },  # Mojo::URL does not fully validate
